<resources>
    <string name="app_name">Abc Mobile Security</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="interstitial_ad_unit" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad_unit" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="upgrade_button"> Upgrade To Pro</string>
    <string name="upgrade_desc">Switch to Pro Version, keeps you free from unwanted ads and keeps your smartphone more secure than ever.</string>
    <string name="upgrade_success">Upgrading to Pro Version been successful</string>
    <string name="upgrade_button_click">Upgrade Now</string>
	<string name="no_permission">No Permission</string>
    <string name="title_location">Get Location</string>
    <string name="message_location">The GPS Location service in Phone Safe need permission</string>
    <string name="explanation_message">The App will crash if permission Declined</string>
    <string name="title_storage">Read And Write Storage</string>
    <string name="message_storage">We need this permission to read and write data when download file / backup or restore contacts and sms</string>
    <string name="title_contacts">Read And Write Contacts</string>
    <string name="message_contacts">We need this permission to backup and restore contacts</string>
    <string name="title_system_alert_window">System Alert Window</string>
    <string name="message_system_alert_window">We need this permission to show location when receive a call</string>
    <string name="tips_thank_you_for_your_use">Thank you for your use</string>
    <string name="title_sms">Read/Write/Send SMS</string>
    <string name="message_sms">We need this permission to backup and restore sms and send phone location to safe phone number</string>
    <string name="title_phone">Phone Permission</string>
    <string name="message_phone">We need this permission to read call log or intercept call</string>
	<string name="all_rights_reserved">Copyright © 2020 ABC Mobile Security. All Rights Reserved.</string>
    <string name="ignored_counter">#1 Apps ignored</string>
    <string name="igonred_message_dialog">No applications in ignore list</string>
    <string name="show_ignored_list_menu">Show ignored list</string>
    <string name="scanningText">Scanning...</string>
    <string name="execute_first_analysis">Run first analysis to check threats</string>
    <string name="are_protected">You are protected</string>
    <string name="high_risk">High Risk</string>
    <string name="medium_risk">Medium Risk</string>
    <string name="trusted_by_app">is a trusted application verified by Abc Mobile Security</string>
    <string name="trusted_message">is a trusted application.</string>
    <string name="has_been_scanned">has problems.</string>
    <string name="is_secure">is safe to open.</string>
    <string name="has_no_threats">is safe to open.</string>
    <string name="enter_to_solve_problems">Problems found, click to resolve...</string>
    <string name="eula_text">We use device identifiers to personalice content and ads, to provide social media features and to analyse our traffic. We also share such identifiers and other information from your device with our social media, advertising and analytics partners.</string>
    <string name="usb_message">Enabling USB debugging is not recommended unless you use your device for software development purposes. Tap Open Settings and disable USB debugging to protect your device.</string>
    <string name="unknownApp_message">Installing apps from unknown sources can lead to malware. Tap Open Settings and then disable Unknown Sources.</string>
    <string name="usb_title">Unsecure Setting</string>
    <string name="open_setting">Open settings</string>
    <string name="ignored_setting">Ignore setting</string>
    <string name="system_app_usb_menace_title">USB Debugging Enabled</string>
    <string name="system_app_unknown_app_menace_title">Unknown Sources Enabled</string>
    <string name="usb_add_whitelist_message">Do you want to add USB Debugging to white list?</string>
    <string name="usb_remove_whitelist_message">Do you want to remove USB Debugging from white list?</string>
    <string name="unknownApp_remove_whitelist_message">Do you want to remove Unknown Sources from white list?</string>
    <string name="threats_found">#1 Problems found</string>
    <string name="menaces_unresolved">#1 Problems</string>
    <string name="title_ads">Ads Displayed</string>
    <string name="ads_message">Displays ads while in use, including banners, pop-ups, and other graphics. The ads are common in free apps.</string>
    <string name="title_installedGPlay">Unknown sources</string>
    <string name="installedGPlay_message">Installing apps from unknown sources can lead to malware. Go to Settings>Security and then disable Unknown Sources.</string>
    <string name="read_phone_message">This app collects and sends SIM card details, including address book, mobile PIN, and call history. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="call_phone_message">This app can initiate a phone call without going through the Dialer user interface for the user to confirm the call. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="outgoing_phone_message">This app can see the number being dialed during an outgoing call with the option to redirect the call to a different number or abort the call altogether. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="send_sms_message">This application can send SMS. This can add charges to data plan and is a HIGH privacy risk.</string>
    <string name="record_audio_message">This application can record audio and is a risk for your privacy.</string>
    <string name="camera_message">This application can access the camera device and is a risk for your privacy.</string>
    <string name="write_sms_message">This application can write SMS. This can add charges to data plan and is a MEDIUM privacy risk.</string>
    <string name="access_fine_message">This application can access its exact position and is a risk for your privacy.</string>
    <string name="read_sms_message">This application can read your private SMS and is a risk for your privacy.</string>
    <string name="read_history_message">This application can read your history bookmarks and is a risk for your privacy.</string>
    <string name="write_history_message">This application can write your history bookmarks and is a risk for your privacy.</string>
    <string name="warning">Warning</string>
    <string name="dialog_message_exit">Are you sure exit?</string>
    <string name="uninstall">Uninstall</string>
    <string name="trust">Trust</string>
    <string name="resolve_problems">Resolve problems</string>
    <string name="dialog_trust_app">You want to trust this application?</string>
    <string name="accept_eula">Accept</string>
    <string name="decline_eula">Decline</string>
    <string name="remove_ignored_app_message">Do you want to remove from the list </string>
    <string name="applications_header_text">Applications</string>
    <string name="system_header_text">System</string>
    <string name="last_scanned">Last scan: #1</string>
    <string name="never">Never</string>
    <string name="install_application">"You are one step away from cleaning any malicious threats found in your device. "</string>
    <string name="scaned_text">Scanned</string>
    <string name="menacesText">Problems</string>
    <string name="welcome_text">Welcome</string>
    <string formatted="false" name="cancel">Cancel</string>
    <string name="phone_data_shared">Phone data shared</string>
    <string name="location_shared">Location shared</string>
    <string name="read_your_sms">Can read your SMS</string>
    <string name="write_sms_title">Can write SMS</string>
    <string name="send_sms_title">Can send SMS</string>
    <string name="read_history_bookmark_title">Can read  your history</string>
    <string name="write_history_bookmark_title">Can write your history</string>
    <string name="can_make_call_title">Can make calls</string>
    <string name="outgoing_calls_title">Can control outgoing calls</string>
    <string name="record_audio_title">Can record audio</string>
    <string name="access_camera_title">Can access camera</string>
    <string name="full_scan">Full Scan</string>
    <string name="full_desc_scan">Scan the full smartphone</string>
    <string name="last_used">Last Used:</string>
    <string name="sdscan_desc">Scan the external storage.</string>
    <string name="application_scan">Application Scan</string>
    <string name="application_desc">Scan the installed application.</string>
    <string formatted="false" name="yes">Yes</string>
    <string name="config_default_quarantine_action">Pharid</string>
    <string name="config_default_scan_action">Pharid</string>
    <string name="virus_protection_settings">Virus Protection</string>
    <string name="preferences_scan_settings">Scan Settings</string>
    <string name="preferences_update">Virus Database Update</string>
    <string name="protected_home">Protection is Activated</string>
    <string name="unprotected_home">Protection is Inactivate</string>
    <string name="Anti_theft">Anti Theft</string>
    <string name="apps_lock">App Locker</string>
    <string name="virus_scan">Virus Scan</string>
    <string name="wifisec_Home">Wifi Security</string>
    <string name="callb_Home">Call Blocker</string>
    <string name="contacts_activity_title">Contacts</string>
    <string name="tips">Tips</string>
    <string name="loding_tips">Loding data...</string>
    <string name="phone_security">Phone Security</string>
    <string name="safe_phone_can_not_be_empty">Safe phone can not be empty</string>
    <string name="title_phone_safe_setting1">Setting safe phone number</string>
    <string name="_sim_sim_bind_info">"   Bind the SIM card, when the phone again, if the SIM card information changes, the mobile phone guards will automatically send an alarm message to the security number!"</string>
    <string name="phone_safe_service">Phone safe service</string>
    <string name="current_safe_phone_number">Current safe phone number:</string>
    <string name="change_safe_phone_number">Change safe phone number</string>
    <string name="bind_sim_summary">It will send a message to Safe Phone when use other SIM card if this service is on.</string>
    <string name="bind_sim">Bind SIM</string>
    <string name="summary_gps_trace">It will send the GPS info to Safe Phone Number if this service is on when receive a message which content equals to #*gps*#</string>
    <string name="gps_trace">Gps Trace</string>
    <string name="summary_music_alarm">It will play alarm sound if this service is on when receive a message which content equals #*alarm*#</string>
    <string name="music_alarm">Alarm</string>
    <string name="summary_device_admin">You can not uninstall app if this service is on. While the following service need this service. You can uninstall when this service is off.</string>
    <string name="pref_device_admin">Activate Device Admin</string>
    <string name="remote_lock_screen">Remote lock screen</string>
    <string name="Call_Block">Call Blocker</string>
    <string name="wifisecurity">Wifi Security</string>
    <string name="settings">Settings</string>
    <string name="App_Lock">App Locker</string>
    <string name="batterysaver">Battery Saver</string>
    <string name="app_about">About Us</string>
</resources>