<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        tools:context="com.mobilesecurity.mobileapp.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:background="@color/HighRiskColor">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="93"
            android:background="#f8ffffff"
            android:orientation="vertical"
            android:weightSum="100"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="35">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <LinearLayout
                        android:id="@+id/background"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/HighRiskColor"
                        android:orientation="vertical"
                        android:visibility="visible">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="0.1dp"
                            android:layout_weight="0.1" />

                        <ImageView
                            android:id="@+id/iconmain"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.5"
                            android:adjustViewBounds="true"
                            android:src="@drawable/shield_high_risk_icon" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.1" />

                        <TextView
                            android:id="@+id/textmain"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/unprotected_home"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textColor="#ffffff"
                            android:textSize="@dimen/menaces_text_font_size"
                            android:textStyle="normal"
                            android:typeface="serif" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.05" />

                        <Button
                            android:id="@+id/upgrade"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/button_height_resolve_problems"
                            android:layout_gravity="center"
                            android:background="@drawable/resolve_button_selector"
                            android:focusable="false"

                            android:text="@string/upgrade_button"
                            android:textAlignment="center"
                            android:textColor="@color/SecondaryTextColor"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:visibility="visible" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="0.1" />
                    </LinearLayout>
                </FrameLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="200dip"
                    android:layout_centerInParent="true">


                </RelativeLayout>


            </RelativeLayout>


            <LinearLayout
                android:id="@+id/ads1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_weight="7">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/admob_adview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/banner_ad_unit">


                </com.google.android.gms.ads.AdView>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="58">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/card_normal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0.0dip"
                        android:layout_weight="1.0"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/card1"
                            android:layout_width="0.0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.0"
                            tools:ignore="NestedWeights">

                            <com.mobilesecurity.mobileapp.view.ItemCardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                card:card_image="@drawable/antivirusicon"
                                card:card_name="@string/virus_scan" />


                        </RelativeLayout>

                        <View
                            android:layout_width="1.0px"
                            android:layout_height="fill_parent"
                            android:background="#19000000" />

                        <RelativeLayout
                            android:id="@+id/card2"
                            android:layout_width="0.0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.0">


                            <com.mobilesecurity.mobileapp.view.ItemCardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                card:card_image="@drawable/antithefticon"
                                card:card_name="@string/Anti_theft" />
                        </RelativeLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px"
                        android:background="#19000000" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0.0dip"
                        android:layout_weight="1.0"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/card3"
                            android:layout_width="0.0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.0">


                            <com.mobilesecurity.mobileapp.view.ItemCardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                card:card_image="@drawable/applockericon"
                                card:card_name="@string/apps_lock" />

                        </RelativeLayout>

                        <View
                            android:layout_width="1.0px"
                            android:layout_height="fill_parent"
                            android:background="#19000000" />

                        <RelativeLayout
                            android:id="@+id/card4"
                            android:layout_width="0.0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.0">


                            <com.mobilesecurity.mobileapp.view.ItemCardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                card:card_image="@drawable/wifiicon"
                                card:card_name="@string/wifisec_Home" />


                        </RelativeLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px"
                        android:background="#19000000" />


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="0.0dip"
                        android:layout_weight="1.0"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/card5"
                            android:layout_width="0.0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.0">


                            <com.mobilesecurity.mobileapp.view.ItemCardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                card:card_image="@drawable/callblockericon"
                                card:card_name="@string/callb_Home" />

                        </RelativeLayout>

                        <View
                            android:layout_width="1.0px"
                            android:layout_height="fill_parent"
                            android:background="#19000000" />

                        <RelativeLayout
                            android:id="@+id/card6"
                            android:layout_width="0.0dip"
                            android:layout_height="fill_parent"
                            android:layout_weight="1.0">


                            <com.mobilesecurity.mobileapp.view.ItemCardView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                card:card_image="@drawable/batterysavericon"
                                card:card_name="@string/batterysaver" />


                        </RelativeLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.0px"
                        android:background="#19000000" />

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>



    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:clickable="true"
        android:focusable="true"
        app:elevation="3dp"
        app:headerLayout="@layout/nav_header_main"
        app:itemBackground="@drawable/custom_bg"
        app:menu="@menu/activity_main_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>