<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainEnd"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher_round"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="48dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAlignment="gravity"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/mainEnd">

        <ImageView
            android:id="@+id/imgv"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@drawable/callblocker_icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgv"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/callb_Home"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ads1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/admob_adview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit">


        </com.google.android.gms.ads.AdView>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#e2e2e2"
        tools:context=".CallBlocker.ui.MainActivity">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/bottomBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#e2e2e2"
            app:layout_constraintTop_toTopOf="parent" />

        <com.iammert.library.readablebottombar.ReadableBottomBar
            android:id="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rbb_backgroundColor="@color/mainEnd"
            app:rbb_indicatorColor="@color/accent"
            app:rbb_tabs="@xml/tabs"
            app:rbb_textColor="#fff" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>